--- a/src/app/card-product/card-product.component.html
+++ b/src/app/card-product/card-product.component.html
@@ -4,7 +4,7 @@
   <div class="card-header" *ngIf="data.news==true">
     Novedad
   </div>
-  <img class="card-img-top" src="{{data.image}}" alt="Card image cap">
+  <img class="card-img-top" src="{{data.image}}" alt="Card image cap" style="width:286px;height:286px;">
   <div class="card-body">
     <h4 class="card-title">{{data.name}}</h4>
     <h5 class="card-text" *ngIf="data.description">{{data.description}}</h5>
