--- a/src/app/menubar/menubar.component.html
+++ b/src/app/menubar/menubar.component.html
@@ -1,10 +1,16 @@
 
 
-<p-menubar [model]="items">
-    <button pButton type="button" label="Iniciar Sesión" class="button m-2" (click)="goToLogin()" *ngIf='loged==false'></button>
-    <button pButton type="button" label="Cerrar Sesión" class="button m-2" (click)="logOut()" *ngIf='loged==true'></button>
-    <button pButton type="button" label="Iniciar Con Google" class="button m-2" (click)="googleLogin()"></button>
-    <button pButton type="button" label="Cerrar Con Google" class="button m-2" (click)="googleLogOut()"></button>
+<p-menubar [model]="items" class="menubar">
+    <div class="row" style="margin-left:1.5rem;">
+        <div class="col">
+            <button pButton type="button" label="Iniciar Sesión" class="button m-2 col" (click)="goToLogin()" *ngIf='loged==false'></button>
+            <button pButton type="button" label="Cerrar Sesión" class="button m-2 col" (click)="logOut()" *ngIf='loged==true'></button>
+        </div>
+        <div class="col">
+            <button pButton type="button" label="Iniciar Con Google" class="button m-2 col" (click)="googleLogin()"></button>
+            <button pButton type="button" label="Cerrar Con Google" class="button m-2 col" (click)="googleLogOut()"></button>
+        </div>
+    </div>
 </p-menubar>
 
 
