--- a/src/app/layout/skeleton/skeleton.component.html
+++ b/src/app/layout/skeleton/skeleton.component.html
@@ -1,3 +1,8 @@
+
+
 <app-navigation></app-navigation>
-<router-outlet class="clase"></router-outlet>
+
+<router-outlet></router-outlet>
+
 <app-footer></app-footer>
+
